# stage-life

./: .env.example  .gitignore  AUTONOMOUS_DEVELOPMENT_PROMPT.md  CONSOLIDATION_COMPLETE.md  MP3_SUPPORT_REPORT.md  README_STAGE_LIFE.md  README_STAGE_LIFE_COMPLETE.md  STAGE_LIFE_ENHANCEMENT_PLAN.md  package-lock.json  package.json  setup-mcp-env.sh  test_mp3_support.py
archive/old-implementation-plans/: LIVE_SHOW_MIX_AND_MASTER_IMPLEMENTATION_PLAN.md  README.md  STREAMING_IMPLEMENTATION_PLAN.md
public/: index.html
src/: App.css  App.js  index.css
src/ai/: AudioAI.js
src/audio/engine/: ProfessionalAudioEngine.js
src/components/: StageLifeHeader.css  StageLifeHeader.js  StageLifeInterface.css  StageLifeInterface.js
src/components/3d/: DrumstickAnimation.css  DrumstickAnimation.js  VanAnimation.css  VanAnimation.js
src/components/audio/: AudioEngine.js  AudioVisualizer.css  AudioVisualizer.js  RecordingControls.css  RecordingControls.js
src/components/communication/: PluginCommunication.js  PluginConnection.css  PluginConnection.js
src/components/payment/: PaymentModal.css  PaymentModal.js
src/electron/: main.js
src/payment/: StripePayment.js
src/plugin/: CMakeLists.txt  README.md  StageLifePlugin.cpp  StageLifePlugin.h
src/plugin/juce/: StageLifePlugin.h
src/utils/: ErrorHandling.js
