cmake_minimum_required(VERSION 3.15)

project(StageLifePlugin VERSION 1.0.0)

# Add JUCE to the project
find_package(PkgConfig REQUIRED)

# For now, this is a placeholder CMakeLists.txt
# In a full implementation, this would:
# 1. Configure JUCE framework
# 2. Set up plugin targets (AU, VST3, AAX)
# 3. Configure cross-platform builds
# 4. Set up code signing for distribution

# Example structure for future implementation:
# add_subdirectory(JUCE)
# 
# juce_add_plugin(StageLifePlugin
#     COMPANY_NAME "Stage-Life"
#     IS_SYNTH FALSE
#     NEEDS_MIDI_INPUT FALSE
#     NEEDS_MIDI_OUTPUT FALSE
#     IS_MIDI_EFFECT FALSE
#     EDITOR_WANTS_KEYBOARD_FOCUS FALSE
#     COPY_PLUGIN_AFTER_BUILD TRUE
#     PLUGIN_MANUFACTURER_CODE StgL
#     PLUGIN_CODE StgL
#     FORMATS AU VST3 AAX
#     PRODUCT_NAME "Stage-Life Plugin"
# )
# 
# target_sources(StageLifePlugin
#     PRIVATE
#         StageLifePlugin.cpp
#         StageLifePlugin.h
# )
# 
# target_compile_definitions(StageLifePlugin
#     PUBLIC
#         JUCE_WEB_BROWSER=0
#         JUCE_USE_CURL=0
#         JUCE_VST3_CAN_REPLACE_VST2=0
# )
# 
# target_link_libraries(StageLifePlugin
#     PRIVATE
#         juce::juce_audio_utils
#         juce::juce_dsp
#     PUBLIC
#         juce::juce_recommended_config_flags
#         juce::juce_recommended_lto_flags
#         juce::juce_recommended_warning_flags
# )

# For MVP, create a simple message
message(STATUS "Stage-Life Plugin CMake configuration placeholder")
message(STATUS "This will be implemented in Phase 4 with full JUCE integration")

# Create placeholder targets
add_custom_target(stage-life-plugin
    COMMAND echo "Stage-Life Plugin build target"
    COMMENT "Building Stage-Life Logic Pro Plugin"
)